--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-<header>
+<style>
+    .header h1{
+        font-style: italic;
+    }
+    .main h1{
+        font-family: Arial;
+    }
+</style>
+<header class="header"   >
     <h1>This is header</h1>
 </header>
-<section>
+<section class="main">
     <h1>This is Section</h1>
 </section>
 </body>
